# MCP-Dauth-Server

./: .env.example  .gitignore  README.md  SCRIPT.md  curl_test.sh  db_setup.py  direct_test.py  interactive_client.py  main.py  pyproject.toml  requirements.txt  schema.sql  server.py  test_client.py
tools/: api.py  business.py  data.py  database.py
